--- a/Session18_Storing-data-in-the-browser/Form/login.html
+++ b/Session18_Storing-data-in-the-browser/Form/login.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Đăng nhập tài khoản - Mua sắm</title>
   <link rel="icon" type="image/x-icon" href="/Form/img/shopee-logo-faincon.png">
-  <link rel="stylesheet" href="/Form/css/stylelogin.css" />
+  <link rel="stylesheet" href="./css/stylelogin.css" />
 </head>
 
 <body>
   <div class="container">
     <form action="" method="post">
       <div class="row">
-        <a href="/Form/login.html" class="active" rel="nofollow">ĐĂNG NHẬP</a>
-        <a href="/Form/register.html" rel="nofollow">ĐĂNG KÝ</a>
+        <a href="./login.html" class="active" rel="nofollow">ĐĂNG NHẬP</a>
+        <a href="./register.html" rel="nofollow">ĐĂNG KÝ</a>
       </div>
       <div class="col_1">
         <!-- <label for="">Tài Khoản</label> <br /> -->
@@ -80,6 +80,6 @@
   </div>
 </body>
 <script src="https://kit.fontawesome.com/7de9ee439a.js" crossorigin="anonymous"></script>
-<script src="/Form/js/login.js"></script>
+<script src="./js/login.js"></script>
 
 </html>
