--- a/Session18_Storing-data-in-the-browser/Form-dep/register.html
+++ b/Session18_Storing-data-in-the-browser/Form-dep/register.html
@@ -15,7 +15,7 @@
     <form action="" method="post">
       <div class="row">
         <a href="./login.html" rel="nofollow">ĐĂNG NHẬP</a>
-        <a href="./register.htmls" class="active" rel="nofollow">ĐĂNG KÝ</a>
+        <a href="./register.html" class="active" rel="nofollow">ĐĂNG KÝ</a>
       </div>
       <div class="col_1">
 
