--- a/Session18_Storing-data-in-the-browser/Mini_Project/assets/index.html
+++ b/Session18_Storing-data-in-the-browser/Mini_Project/assets/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web ban hang</title>
-    <link rel="icon" type="image/x-icon" href="/Form/img/shopee-logo-faincon.png">
-    <link rel="stylesheet" href="/Mini_Project/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="./img/path-227.png">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -19,7 +19,6 @@
             <div class="header">
                 <!-- <header> -->
                 <div class="header_top">
-
                     <div class="container-header">
                         <div class="phoneHotline">
                             <a class="t-header_contactLeft" href="tel:+0399363868">
@@ -27,7 +26,6 @@
                                 <span style="color: #fff;">Hotline đặt hàng 0399363868</span>
                             </a>
                         </div>
-
                         <div class="t-header_contactRight_element">
                             <div class="t-header_contactRight_element-desktop">
                                 <button type="button" class="t-header_contactRight_btn">
