--- a/Session19_Storing-data-in-the-browser/gio hang/index.html
+++ b/Session19_Storing-data-in-the-browser/gio hang/index.html
@@ -21,8 +21,10 @@
         }
 
         .container .product {
-            margin-left: 50 px;
-            justify-content: space-around;
+            display: grid;
+            grid-template: auto auto auto auto;
+            padding: 10px;
+
         }
     </style>
 </head>
