--- a/On-tap/bai_5_nhap-3-canh-bat-ky-in-kieu-la-tam-giac-gi/index.html
+++ b/On-tap/bai_5_nhap-3-canh-bat-ky-in-kieu-la-tam-giac-gi/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>bai_5_nhap-3-canh-bat-ky-in-kieu-la-tam-giac-gi</title>
 </head>
 
 <body>
-    <script src="./index.js"></script>
+    <script>
+        let a = prompt("nhap canh a")
+        let b = prompt("nhap canh b")
+        let c = prompt("nhap canh c")
+
+    </script>
 </body>
 
 </html>
