--- a/On-tap/bai_7_phien-am-so-vua-nhap/index.html
+++ b/On-tap/bai_7_phien-am-so-vua-nhap/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>bai_7_phien-am-so-vua-nhap</title>
 </head>
 
 <body>
-    <script src="./index.js"></script>
+<script>
+    
+</script>
 </body>
 
 </html>
