--- a/Session19_Storing-data-in-the-browser/gio hang/index.html
+++ b/Session19_Storing-data-in-the-browser/gio hang/index.html
@@ -26,10 +26,20 @@
             padding: 10px;
 
         }
+
+        .container img {
+            height: 250px;
+            width: 220px;
+
+        }
     </style>
 </head>
 
 <body>
+    <div>
+        <label for="search">Tim Kiem</label>
+        <input id="inPutSearch" type="text" oninput="timKiemSP()">
+    </div>
     <div class="container" id="showProduct">
         <!-- <div class="product">
             <img src="./img/anh1.jfif" alt="">
